--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@
 body { margin: 0; font-family: 'Roboto', sans-serif; cursor: default; }
 a { text-decoration: none; color: var(--color-white);}
 ul { list-style: none; padding-left: 0; }
+button { background-color: transparent; cursor: pointer; border: none; outline: none; }
 
 /* Typography */
 h1 {
@@ -90,4 +91,31 @@ p {
 }
 .navbar__menu__item:hover {
   background-color: var(--color-dark-pink);
+}
+
+/* Home */
+#home {
+  padding: 40px;
+  /* background: url(imgs/) center/cover no-repeat; 이미지 추가 */
+  background: var(--color-dark-pink);
+  text-align: center;
+}
+.home__avatar {
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+  border: 2px solid var(--color-light-white);
+}
+.home__title,
+.home__description {
+  color: var(--color-white);
+}
+.home__contact {
+  margin: 24px;
+  padding: 8px 12px;
+  border: 2px solid var(--color-white);
+  border-radius: var(--size-border-radius);
+  color: var(--color-white);
+  font-size: var(--font-regular);
+  font-weight: var(--weight-bold);
 }
