--- a/style.css
+++ b/style.css
@@ -29,6 +29,9 @@
 
   /* Size */
   --size-border-radius: 4px;
+
+  /* Animation */
+  --animation-duration: 0.3s;
 }
 
 /* 공통 */
@@ -118,4 +121,59 @@ p {
   color: var(--color-white);
   font-size: var(--font-regular);
   font-weight: var(--weight-bold);
+}
+
+/* Section common */
+.section {
+  max-width: 1200px;
+  margin: auto;
+  padding: 50px;
+  text-align: center;
+}
+
+/* About */
+.about__majors {
+  display: flex;
+  justify-content: space-between;
+  margin: 80px 0;
+}
+.major {
+  width: 30%;
+}
+.major__icon {
+  width: 170px;
+  height: 170px;
+  margin: auto;
+  margin-bottom: 16px;
+  border: 1px solid var(--color-blue);
+  border-radius: 50%;
+  color: var(--color-blue);
+  font-size: 70px;
+  line-height: 170px;
+}
+.major__icon i {
+  transition: all var(--animation-duration) ease;
+}
+.major__icon:hover i {
+  color: var(--color-pink);
+  transform: rotate(-30deg) scale(1.1);
+}
+.major__title, .major__description {
+  color: var(--color-dark-grey);
+}
+.major__description {
+  font-size: var(--font-small);
+}
+
+.job {
+  margin-bottom: 16px;
+}
+.job__name, .job__period {
+  color: var(--color-light-grey);
+}
+.job__name {
+  font-size: var(--font-small);
+}
+.job__period {
+  font-size: var(--font-micro);
 }
