--- a/style.css
+++ b/style.css
@@ -125,10 +125,13 @@ p {
 
 /* Section common */
 .section {
-  max-width: 1200px;
   margin: auto;
   padding: 50px;
   text-align: center;
+}
+.section__container {
+  max-width: 1200px;
+  margin: auto;
 }
 
 /* About */
@@ -176,4 +179,49 @@ p {
 }
 .job__period {
   font-size: var(--font-micro);
+}
+
+/* Skill */
+#skills {
+  background-color: var(--color-yellow);
+}
+.skillset {
+  display: flex;
+  margin: 20px 0;
+  background-color: var(--color-light-grey);
+  color: var(--color-light-white);
+}
+.skillset__title {
+  color: var(--color-white);
+}
+.skillset__left {
+  flex-basis: 60%;
+  padding: 20px 40px;
+  background-color: var(--color-dark-grey);
+}
+.skill + .skill {
+  margin-top: 40px;
+}
+.skill__description {
+  display: flex;
+  justify-content: space-between;
+}
+.skill__bar {
+  height: 3px;
+  margin-top: 5px;
+  background-color: var(--color-grey);
+}
+.skill__value {
+  height: 3px;
+  background-color: var(--color-orange);
+}
+
+.skillset__right {
+  flex-basis: 40%;
+}
+.tools, .etc {
+  padding: 20px;
+}
+.tools {
+  background-color: var(--color-grey);
 }
