--- a/style.css
+++ b/style.css
@@ -225,3 +225,98 @@ p {
 .tools {
   background-color: var(--color-grey);
 }
+
+/* Works */
+.work__categories {
+  margin: 40px;
+}
+.category__btn {
+  height: 40px;
+  padding: 0 48px;
+  border: 1px solid var(--color-dark-white);
+  border-radius: var(--size-border-radius);
+  line-height: 40px;
+  font-size: var(--font-regular );
+}
+.category__btn.active,
+.category__btn:hover {
+  background-color: var(--color-pink);
+  color: var(--color-white);
+}
+.category__btn.active .category__count,
+.category__btn:hover .category__count {
+  top: 0;
+  opacity: 1;
+}
+.category__count {
+  display: inline-block;
+  position: relative;
+  top: -20px;
+  left: 4px;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  background-color: var(--color-orange);
+  line-height: 24px;
+  color: var(--color-white);
+  opacity: 0;
+  transition: all var(--animation-duration) ease-in;
+}
+
+.work__projects {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.project {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  width: 280px;
+  height: 250px;
+  margin: 2px;
+  background-color: var(--color-light-white);
+}
+.project__img {
+  max-width: 100%;
+  max-height: 100%;
+}
+.project__description {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;  
+  background: var(--color-black);
+  opacity: 0;
+  transition: all var(--animation-duration) ease-in;
+}
+.project__description h3 {
+  color: var(--color-white);
+  transform: translateY(10px);
+  transition: all var(--animation-duration) ease-in;
+}
+.project__description h3::after {
+  content: '';
+  display: block;
+  width: 25px;
+  height: 2px;
+  margin: 8px auto 0;
+  background-color: var(--color-dark-white);
+}
+.project__description p {
+  color: var(--color-light-white);
+  transform: translateY(10px);
+  transition: all var(--animation-duration) ease-in;
+}
+.project:hover .project__description {
+  opacity: 0.8;
+}
+.project:hover .project__description h3,
+.project:hover .project__description p {
+  transform: translateY(0);
+}
