--- a/style.css
+++ b/style.css
@@ -96,6 +96,15 @@ p {
   background-color: var(--color-dark-pink);
 }
 
+.navbar__toggle-btn {
+  display: none;
+  position: absolute;
+  top: 20px;
+  right: 32px;
+  color: var(--color-white);
+  font-size: 24px;
+}
+
 /* Home */
 #home {
   padding: 40px;
@@ -199,8 +208,8 @@ p {
   padding: 20px 40px;
   background-color: var(--color-dark-grey);
 }
-.skill + .skill {
-  margin-top: 40px;
+.skill {
+  margin-bottom: 30px;
 }
 .skill__description {
   display: flex;
@@ -381,4 +390,48 @@ p {
 }
 .contact__rights {
   font-weight: var(--weight-light);
+}
+
+/* 768px screen width */
+@media screen and (max-width: 768px) {
+  /* Navbar */
+  #navbar {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .navbar__menu {
+    /* display: none; */
+    flex-direction: column;
+    text-align: center;
+    width: 100%;
+  }
+  .navbar__toggle-btn {
+    display: block;
+  }
+
+  /* About */
+  .about__majors {
+    flex-direction: column;
+    align-items: center;
+  }
+  .major {
+    width: 100%;
+    margin-bottom: 38px;
+  }
+
+  /* Skills */
+  .skillset {
+    flex-direction: column;
+  }
+
+  /* Works */
+  .project {
+    flex-grow: 1;
+  }
+
+  /* Testimonials */
+  .testimonials__avatar {
+    width: 80px;
+    height: 80px;
+  }
 }
