--- a/style.css
+++ b/style.css
@@ -80,6 +80,7 @@ p {
   /* background-color: var(--color-pink); */
   color: var(--color-white);
   transition: all var(--animation-duration) ease-in-out;
+  z-index: 1;
 }
 #navbar.navbar--dark {
   height: 70px;
