--- a/style.css
+++ b/style.css
@@ -403,6 +403,31 @@ p {
   font-weight: var(--weight-light);
 }
 
+/* top button */
+.arrow-up {
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: var(--color-blue);
+  color: var(--color-white);
+  text-align: center;
+  line-height: 38px;
+  font-size: 20px;
+  opacity: 0;
+  pointer-events: none;
+  transition: all var(--animation-duration) ease-in;
+}
+.arrow-up.visible {
+  opacity: 0.8;
+  pointer-events: auto;
+}
+.arrow-up:hover {
+  opacity: 1;
+}
+
 /* 768px screen width */
 @media screen and (max-width: 768px) {
   /* Navbar */
