--- a/style.css
+++ b/style.css
@@ -97,12 +97,11 @@ p {
   margin: 0 4px;
   padding: 8px 12px;
   border-radius: var(--size-border-radius);
+  border: 1px solid transparent;
   cursor: pointer;
 }
-.navbar__menu__item.active {
-  border: 1px solid var(--color-white);
-}
 .navbar__menu__item:hover {
+  border: 1px solid var(--color-white);
   background-color: var(--color-dark-pink);
 }
 
