--- a/style.css
+++ b/style.css
@@ -77,7 +77,6 @@ p {
   align-items: center;
   width: 100%;
   padding: 16px;
-  /* background-color: var(--color-pink); */
   color: var(--color-white);
   transition: all var(--animation-duration) ease-in-out;
   z-index: 1;
@@ -324,14 +323,14 @@ p {
   transition: all var(--animation-duration) ease-in;
 }
 .project__description h3 {
-  color: var(--color-white);
+  color: var(--color-orange);
   transform: translateY(10px);
   transition: all var(--animation-duration) ease-in;
 }
 .project__description h3::after {
   content: '';
   display: block;
-  width: 25px;
+  width: 50px;
   height: 2px;
   margin: 8px auto 0;
   background-color: var(--color-dark-white);
@@ -442,12 +441,19 @@ p {
   #navbar {
     flex-direction: column;
     align-items: flex-start;
+    background-color: var(--color-pink);
+  }
+  #navbar.navbar--dark {
+    height: auto;
   }
   .navbar__menu {
-    /* display: none; */
+    display: none;
     flex-direction: column;
     text-align: center;
     width: 100%;
+  }
+  .navbar__menu.open {
+    display: block;
   }
   .navbar__toggle-btn {
     display: block;
