--- a/style.css
+++ b/style.css
@@ -4,15 +4,14 @@
   --color-white: #fff;
   --color-light-white: #eee;
   --color-dark-white: #bdbdbd;
-  --color-pink: #fe918d;
-  --color-dark-pink: #ff6863;
+  --color-dark-blue: #083DA6;
+  --color-blue: #055BA6;
+  --color-light-blue: #84B1D9;
+  --color-orange: #ffb443;
   --color-black: #000;
   --color-dark-grey: #4d4d4d;
   --color-grey: #616161;
   --color-light-grey: #7c7979;
-  --color-blue: #73aace;
-  --color-yellow: #fff7d1;
-  --color-orange: #feb546;
 
   /* Font size */
   --font-large: 48px;
@@ -85,7 +84,7 @@ p {
 }
 #navbar.navbar--dark {
   height: 70px;
-  background-color: var(--color-pink);
+  background-color: var(--color-dark-blue);
 }
 .navbar__logo {
   font-size: var(--font-medium);
@@ -103,7 +102,7 @@ p {
 }
 .navbar__menu__item:hover {
   border: 1px solid var(--color-white);
-  background-color: var(--color-dark-pink);
+  background-color: var(--color-blue);
 }
 .navbar__menu__item.active {
   border: 1px solid var(--color-white);
@@ -120,10 +119,9 @@ p {
 
 /* Home */
 #home {
-  padding: 40px;
-  padding-top: 120px;
-  /* background: url(imgs/) center/cover no-repeat; 이미지 추가 */
-  background: var(--color-dark-pink);
+  padding: 50px;
+  padding-top: 150px;
+  background: url(imgs/homebg.png) center/cover no-repeat;
   text-align: center;
 }
 .home__avatar {
@@ -174,9 +172,9 @@ p {
   height: 170px;
   margin: auto;
   margin-bottom: 16px;
-  border: 1px solid var(--color-blue);
+  border: 1px solid var(--color-light-blue);
   border-radius: 50%;
-  color: var(--color-blue);
+  color: var(--color-light-blue);
   font-size: 70px;
   line-height: 170px;
 }
@@ -184,7 +182,7 @@ p {
   transition: all var(--animation-duration) ease;
 }
 .major__icon:hover i {
-  color: var(--color-pink);
+  color: var(--color-dark-blue);
   transform: rotate(-30deg) scale(1.1);
 }
 .major__title, .major__description {
@@ -209,7 +207,7 @@ p {
 
 /* Skill */
 #skills {
-  background-color: var(--color-yellow);
+  background-color: var(--color-light-white);
 }
 .skillset {
   display: flex;
@@ -267,7 +265,7 @@ p {
 }
 .category__btn.active,
 .category__btn:hover {
-  background-color: var(--color-pink);
+  background-color: var(--color-dark-blue);
   color: var(--color-white);
 }
 .category__btn.active .category__count,
@@ -389,12 +387,12 @@ p {
   color: var(--color-light-grey);
 }
 .testimonial__speech-bubble a {
-  color: var(--color-pink);
+  color: var(--color-dark-blue);
 }
 
 /* Contact */
 #contact {
-  background-color: var(--color-pink);
+  background-color: var(--color-dark-blue);
 }
 .contact__title,
 .contact__email,
@@ -412,7 +410,7 @@ p {
   transition: all var(--animation-duration) ease-in;
 }
 .contact__links i:hover {
-  color: var(--color-yellow);
+  color: var(--color-light-blue);
   transform: scale(1.1);
 }
 .contact__rights {
@@ -427,7 +425,7 @@ p {
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  background-color: var(--color-blue);
+  background-color: var(--color-dark-blue);
   color: var(--color-white);
   text-align: center;
   line-height: 38px;
@@ -456,7 +454,7 @@ p {
   #navbar {
     flex-direction: column;
     align-items: flex-start;
-    background-color: var(--color-pink);
+    background-color: var(--color-dark-blue);
   }
   #navbar.navbar--dark {
     height: auto;
